# multi_sig_contract

./: .gitignore  Cargo.toml  README.md
contract/: Cargo.toml  build.sh  chainless.json  deploy.sh  fees_call.json  init_on_newchain_newcoin_newchain.sh  init_on_newchain_oldcoin_newchain.sh  init_on_newchain_oldcoin_oldchain.sh  local.json  multi_sig.json  multi_sig.node0.json  multi_sig4.node0.json  multi_sig5.node0.json  multi_sig7.node0.json  multi_sig7_local.node0.json  multi_sig7_test.node0.json  test.json
contract/src/: external_bridge.rs  external_coin.rs  lib.rs
example/rs/: Cargo.toml
example/rs/src/: main.rs  meta_tx.rs
near-jsonrpc-primitives/: Cargo.toml
near-jsonrpc-primitives/src/types/: query.rs
near-primitives/: Cargo.toml
near-primitives/src/: errors.rs  receipt.rs  test_utils.rs  transaction.rs  types.rs  utils.rs  views.rs
near-primitives/src/action/: mod.rs
near-sdk-rs/: README_CHAINLESS.md
near-sdk-rs/near-contract-standards/src/fungible_token/: core_impl.rs  macros.rs
test_coin/: Cargo.lock_bak  Cargo.toml  all.sh  cly.node0.json  deploy.sh  dw20.node0.json  init.sh
test_coin/coin_key/: btc.node0.json  cly2.node0.json  eth.node0.json  usdc.node0.json  usdt.node0.json
test_coin/src/: lib.rs
