[package]
name = "contract"
version = "1.0.0"
authors = ["Near Inc <hello@near.org>"]
edition = "2021"

[lib]
crate-type = ["cdylib","lib"]

[dependencies]
## near-sdk = "4.0.0"
near-sdk = { path = "../../chainless-sdk-rs/near-sdk"}
uint = { version = "0.9.3", default-features = false }
serde = "1.0.192"
ed25519-dalek = "1.0.1"
hex = "0.4.3"
serde_json = "1.0.108"


[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

##release when build
##[workspace]
##members = []
