[package]
name = "fungible-token"
version = "1.0.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
##parity-secp256k1 = { git = "https://github.com/paritytech/rust-secp256k1.git", rev = "d05fd8e152f8d110b587906e3d854196b086e42a" }
##near-sdk = "4.0.0"
##near-contract-standards = "4.1.1"
##near-contract-standards = {path = "../near-contract-standards"}
near-sdk = {path = "../near-sdk-rs/near-sdk"}
near-contract-standards = {path = "../near-sdk-rs/near-contract-standards"}
