[package]
name = "multi_sig_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.3.0"
near-jsonrpc-client = "0.6.0"
near-crypto = "0.17.0"
near-primitives = "0.17.0"
near-chain-configs = "0.17.0"
near-jsonrpc-primitives = "0.17.0"
hex = "0.4"
serde_json = "1.0.108"
serde = "1.0.193"
log = "0.4.20"
##tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio = { version = "1.28", features = ["full"] }
ed25519-dalek = "1.0.1"

##near-sdk = "4.1.1"


