[package]
name = "multi_sig_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.3.0"
##near-jsonrpc-client = "0.8.0"
near-crypto = "0.20.1"
##near-primitives = "0.20.1"
near-primitives = {path = "../../near-primitives"}
near-chain-configs = "0.20.1"
##near-jsonrpc-primitives = "0.20.1"
near-jsonrpc-primitives = {path = "../../near-jsonrpc-primitives"}
near-jsonrpc-client = {path = "../../near-jsonrpc-client-rs"}
multi_wallet_contract = {package = "contract", path = "../../contract"}

hex = "0.4"
serde_json = "1.0.108"
serde = "1.0.193"
log = "0.4.20"
##tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio = { version = "1.28", features = ["full"] }
ed25519-dalek = "1.0.1"
reqwest = "0.11"


##near-sdk = "4.1.1"

## near-crypto = { git = "https://github.com/wulianapp/blockchain.git", branch = "master", subdir = "core/crypto" }
## chainless-jsonrpc-client = { git = "https://github.com/wulianapp/chainless-jsonrpc-client-rs.git" }
## near-jsonrpc-primitives = { git = "https://github.com/wulianapp/blockchain.git", branch = "master", subdir = "chain/jsonrpc-primitives" }
## near-primitives = { git = "https://github.com/wulianapp/blockchain.git", branch = "master", subdir = "core/primitives" }


