[package]
name = "multi_sig_example"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.3.0"
near-chain-configs = "0.20.1"
hex = "0.4"
serde_json = "1.0.108"
serde = "1.0.193"
log = "0.4.20"
tokio = { version = "1.28", features = ["full"] }
ed25519-dalek = "1.0.1"
reqwest = "0.11"
near-crypto = { git = "https://github.com/wulianapp/blockchain.git", branch = "master", subdir = "core/crypto" }
chainless-jsonrpc-client = { git = "https://github.com/wulianapp/chainless-jsonrpc-client-rs.git" }
near-jsonrpc-primitives = { git = "https://github.com/wulianapp/blockchain.git", branch = "master", subdir = "chain/jsonrpc-primitives" }
near-primitives = { git = "https://github.com/wulianapp/blockchain.git", branch = "master", subdir = "core/primitives" }


